--- a/src/features/transfer/NewTransferForm.module.css
+++ b/src/features/transfer/NewTransferForm.module.css
@@ -3,16 +3,16 @@
 }
 
 .form {
-  background: #ffffff;
+  background: #fff;
   padding: 2rem;
   border-radius: 1rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  align-items: center;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .row {
@@ -29,7 +29,7 @@
   padding: 0.75rem 1rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
-  width: 40rem;
+  width: 100%;
 }
 
 .form select {
@@ -37,10 +37,5 @@
   border: 1px solid var(--color-light--2);
   padding: 1.2rem;
   border-radius: 5px;
-  width: 40rem;
-}
-
-.error {
-  font-size: 1.8rem;
-  color: red;
+  width: 100%;
 }
