--- a/src/features/transfer/ReceiverInfo.module.css
+++ b/src/features/transfer/ReceiverInfo.module.css
@@ -1,13 +1,16 @@
-.userInfo {
+.receiverInfo {
   background: #ffffff;
   padding: 2rem;
   border-radius: 1rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-  min-height: 0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
-  flex: 1;
   gap: 1rem;
+  min-height: 0; /* Umożliwiam skurczanie się flex-boxa, żeby zadziałał overflow na liście */
+}
+
+.receiverInfo h4 {
+  font-size: 1.6rem;
 }
 
 .box {
@@ -15,26 +18,12 @@
   flex-direction: column;
   align-items: center;
   font-size: 2.4rem;
-  /* min-height: 0; */
 }
 
 .list {
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
   overflow-y: auto;
-  min-height: 0;
-}
-
-.listBox {
-  min-height: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.listBox h4 {
-  font-size: 1.6rem;
+  padding-right: 0.8rem;
 }
 
 .accountItem {
@@ -44,6 +33,7 @@
   background: #f9faff;
   cursor: pointer;
   font-size: 1.6rem;
+  margin-bottom: 1rem;
 }
 
 .active {
